Add target blank

--- a/app/views/single_source_feed/show.html.erb
+++ b/app/views/single_source_feed/show.html.erb
@@ -13,7 +13,7 @@
         <img src="<%= feed.image_url %>" class="img-responsive img-rounded pull-left" />
       </div>
       <div class="col-xs-9">
-        <%= link_to h(feed.name), feed.url %>
+        <%= link_to h(feed.name), feed.url, target: '_blank' %>
       </div>
     </div>
   <% end %>
