Woohoo! end to end working. Contents are cached, then sorted. The view and partials display dynamic content.

--- a/app/views/economia/index.html.erb
+++ b/app/views/economia/index.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, "Economia") %>
+<% articles =  @economia_articles if local_assigns[:articles].nil? %>
 
+<%= render 'layouts/news_content', articles: @economia_articles %>
 
-<%= render 'layouts/header' %>
-<%= render 'layouts/news_content' %>
-<%= render 'layouts/footer' %>
 
