--- a/app/views/layouts/_news_content.html.erb
+++ b/app/views/layouts/_news_content.html.erb
@@ -1,44 +1,52 @@
-<div class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="col-md-5">
-          <a href="#"><img src="http://www.la-razon.com/economia/Figueroa-Mariscal-Faltan-Pedro-Laguna_LRZIMA20150601_0024_11.jpg" class="img-responsive"></a>
+<% articles.each_with_index do |article, idx| %>
+  <% if idx.odd? %>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="col-md-5">
+              <a href="#"><%= image_tag(article['image_url'], :class => "img-responsive") %></a>
+            </div>
+            <div class="col-md-7">
+              <h2 contenteditable="true">
+                <%= article['title'] %>
+              </h2>
+              <p>El Ministerio de Desarrollo Productivo convocó a una reunión a los panificadores
+                de la Federación de La Paz y El Alto para hoy a las 15.00 con el objetivo
+                de escuchar sus demandas, sin embargo, el encuentro está condicionado a
+                que el precio de la marraqueta se mantenga en Bs 0,40.</p>
+            </div>
+          </div>
         </div>
-        <div class="col-md-7">
-          <h2 contenteditable="true">El Gobierno convoca para hoy a los panificadores, con condiciones</h2>
-          <p>El Ministerio de Desarrollo Productivo convocó a una reunión a los panificadores
-            de la Federación de La Paz y El Alto para hoy a las 15.00 con el objetivo
-            de escuchar sus demandas, sin embargo, el encuentro está condicionado a
-            que el precio de la marraqueta se mantenga en Bs 0,40.</p>
+        <div class="row">
+          <div class="col-md-12">
+            <hr class="article-separator">
+          </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <hr class="article-separator">
+  <% else %>
+    <div class="section">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7">
+            <h2>
+              <%= article['title'] %>
+            </h2>
+            <p>La Cancillería emitió un comunicado en el que nuevamente exige el resarcimiento
+              por los daños provocados al transporte y comercio bolivianos por el paro
+              de funcionario aduaneros del 20 al 28 de mayo</p>
+          </div>
+          <div class="col-md-5">
+            <a href="#"><%= image_tag(article['image_url'], :class => "img-responsive") %></a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <hr class="article-separator">
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-</div>
-<div class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-7">
-        <h2>Bolivia ve que Chile falta ‘groseramente a la verdad’ y elude responsabilidad
-          de Estado en paro aduanero</h2>
-        <p>La Cancillería emitió un comunicado en el que nuevamente exige el resarcimiento
-          por los daños provocados al transporte y comercio bolivianos por el paro
-          de funcionario aduaneros del 20 al 28 de mayo</p>
-      </div>
-      <div class="col-md-5">
-        <a href="#"><img src="http://www.la-razon.com/economia/Paro-aduanero-Chile-transportistas-Bolivia_LRZIMA20150527_0100_11.jpg" class="img-responsive"></a>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <hr class="article-separator">
-      </div>
-    </div>
-  </div>
-</div>
+  <% end %>
+<% end %>
