--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,21 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-  <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css"
         rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="economia.css">
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,300' rel='stylesheet' type='text/css'>
   <div class="section section-primary">
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <div class="page-header">
-            <h1 class="text-center">Economía</h1>
+          <div class="page-header site-header">
+            <div class="site-header-inner">
+              <div class="site-header-mainflag">
+                <h1> PrimerMeridiano</h1>
+              </div>
+            </div>
           </div>
-          <p>La Paz, Bolivia
-            <br>
-          </p>
           <h4 class="text-left"></h4>
         </div>
       </div>
