--- a/app/views/layouts/_article_image_frame.html.erb
+++ b/app/views/layouts/_article_image_frame.html.erb
@@ -3,16 +3,19 @@
       <div class="col-md-3 center-cropped">
         <a href="#"><%= image_tag(article.image_url, class: "img-responsive") %></a>
       </div>
-      <div class="col-md-5">
+      <div class="col-md-5 article-pane-text ">
         <div class="section float:right;">
           <div class="row">
-            <h3><%= article.title %></h3>
-            <p><%= article.summary %></p>
-            <div class="icon-items">
-              <i class="fa fa-clock-o"></i> &nbsp;hace <%= elapsed_time(article) %>&nbsp;
+            <h3><%= link_to article.title, article_path(article) %></h3>
+            <p><%= article.deck %></p>
+            <div class="article-pane-summary">
+              <%= raw(article.summary) %>
             </div>
             <div class="icon-items">
-              <i class="fa fa-fw fa-user"></i> &nbsp;<%= article.author %>&nbsp;
+              <i class="fa fa-clock-o"></i>&nbsp;hace <%= elapsed_time(article) %>&nbsp;
+            </div>
+            <div class="icon-items">
+              <i class="fa fa-fw fa-user"></i>&nbsp;<%= article.author %>&nbsp;
             </div>
             <div class="icon-items">
               <i class="fa fa-external-link fa-fw"></i>
