--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,13 +4,15 @@
       <div class="col-sm-6 col-md-12">
         <h3 class="text-center">Chasquis Noticias</h3>
         <p class="text-center">
-          <%= link_to "Quienes Somos", quienes_path %>&nbsp;|
-          <%= link_to "Contáctanos", contactanos_path %>&nbsp;|
-          <%= link_to "Preguentas Frequentes", preguntas_path %>&nbsp;|
+          <%= link_to "Quienes Somos", quienes_path %>&nbsp;&nbsp;|&nbsp;
+          <%= link_to "Contáctanos", contactanos_path %>&nbsp;|&nbsp;
+          <%= link_to "Preguentas Frequentes", preguntas_path %>&nbsp;|&nbsp;
           <%= link_to "Términosde Uso", terminos_path %>
         </p>
         <p class="text-center">©&nbsp;2015 La Borrachera Medias</p>
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </footer>
